--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
   <body>
-    <script src="lib/p5.js"></script>
-    <script src="sketch.js"></script>
+    <script src="js/lib/p5.js"></script>
+    <script src="js/fish.js"></script>
+    <script src="js/sketch.js"></script>
   </body>
 </html>
