--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <script src="js/lib/p5.js"></script>
+    <script src="js/lib/p5.sound.js"></script>
     <script src="js/fish.js"></script>
     <script src="js/sketch.js"></script>
   </body>
